Create movie models, movie forms, and movie routes

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,8 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+{{!-- 4. Add a link for the celebrities route --}}
+<div class="container">
+
+    <h1>{{title}}</h1>
+    <p>Welcome to {{title}}</p>
+    <a href="/celebrities">Celebrities</a>
+    
+</div>
